Bug 119843 - Thick black borders shown on sheet upon opening, cell selection not shown and Writer selection only shows outline
Summary: Thick black borders shown on sheet upon opening, cell selection not shown and...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: highest critical
Assignee: Armin Le Grand (collabora)
URL:
Whiteboard: target:6.2.0
Keywords: bibisected, bisected, regression
: 119889 119896 119925 119969 119994 120004 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-09-13 12:40 UTC by Buovjaga
Modified: 2019-01-08 21:53 UTC (History)
13 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of problem (23.02 KB, image/png)
2018-09-13 12:40 UTC, Buovjaga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2018-09-13 12:40:53 UTC
Created attachment 144837 [details]
Screenshot of problem

1. Open Calc
Observe weird borders.
They scrub away partly as you scroll.

Not yet seen with yesterday's Win build - either very new or Linux-only.
VCL backend does not affect it.

Arch Linux 64-bit
Version: 6.2.0.0.alpha0+
Build ID: c5846c5af1fff1543a160743dd2728c76f901e8b
CPU threads: 8; OS: Linux 4.18; UI render: default; VCL: gtk3_kde5; 
Locale: fi-FI (fi_FI.UTF-8); Calc: threaded
Built on September 13th 2018
Comment 1 Xisco Faulí 2018-09-13 13:20:46 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=7034311dce663c895577267110baadbec312d491

author	Armin Le Grand <Armin.Le.Grand@cib.de>	2018-09-06 18:15:02 +0200
committer	Armin Le Grand <Armin.Le.Grand@cib.de>	2018-09-13 08:49:35 +0200
commit 7034311dce663c895577267110baadbec312d491 (patch)
tree 8c1d712cbfb1b15dc492e6e724b6b22892914249
parent d92b0efe58b77247e1e5292c1a989baa934df797 (diff)
Support buffering SystemDependent GraphicData (II)

Bisected with: bibisect-linux64-6.2

Adding Cc: to Armin Le Grand
Comment 2 Telesto 2018-09-15 15:17:53 UTC
*** Bug 119889 has been marked as a duplicate of this bug. ***
Comment 3 Telesto 2018-09-15 20:27:12 UTC
*** Bug 119896 has been marked as a duplicate of this bug. ***
Comment 4 Buovjaga 2018-09-17 09:07:46 UTC
*** Bug 119925 has been marked as a duplicate of this bug. ***
Comment 5 himajin100000 2018-09-18 14:02:44 UTC
reproucible on windows too.

Version: 6.2.0.0.alpha0+ (x64)
Build ID: 8c20d5d4ad6f3e8c672337e3ba67be45a1ccb7c2
CPU threads: 4; OS: Windows 10.0; UI render: default; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-09-14_03:39:09
Locale: en-US (ja_JP); Calc: CL
Comment 6 Xisco Faulí 2018-09-18 16:12:28 UTC
Same problem when selecting cells on a writer table
Comment 7 raal 2018-09-19 07:50:06 UTC
*** Bug 119969 has been marked as a duplicate of this bug. ***
Comment 8 Xisco Faulí 2018-09-19 11:28:07 UTC
let's put it to critical. It's almost impossible to work with calc in master
Comment 9 Armin Le Grand (collabora) 2018-09-19 13:13:20 UTC
ALG: Seems to have to do with buffering filled PolyPolygons. Taking a look...
Comment 10 Armin Le Grand (collabora) 2018-09-19 13:17:36 UTC
ALG: Seems to be the selection visualization - if you start calc, A1 is selected -> frame is top-left. If you select A2, frame goes lower. Zooms/scales with the view - seems to get a wrong transformation...
Grepping task...
Comment 11 Armin Le Grand (collabora) 2018-09-19 13:40:21 UTC
Problem found and fix at https://gerrit.libreoffice.org/#/c/60769/
Comment 12 Buovjaga 2018-09-19 13:47:08 UTC
(In reply to Armin Le Grand (CIB) from comment #11)
> Problem found and fix at https://gerrit.libreoffice.org/#/c/60769/

Built and verified fix! Everything, including Writer text & table cell selections seem to be working now.
Comment 13 Armin Le Grand (collabora) 2018-09-20 06:57:39 UTC
Unfortunately https://gerrit.libreoffice.org/#/c/60769/ continues to fail for unsharp reasons (see description there) - sorry, this *simple* fgix is not yet in master - sigh
Comment 14 Xisco Faulí 2018-09-20 09:45:03 UTC
I've also reported bug 120004 because I don't know if the root cause is the same...
@Armin, @Buovjaga, could you please try with the patch added ?
Comment 15 Buovjaga 2018-09-20 09:53:14 UTC
(In reply to Xisco Faulí from comment #14)
> I've also reported bug 120004 because I don't know if the root cause is the
> same...
> @Armin, @Buovjaga, could you please try with the patch added ?

I see the borders with the patch.
Comment 16 Xisco Faulí 2018-09-20 10:02:02 UTC
*** Bug 120004 has been marked as a duplicate of this bug. ***
Comment 17 Xisco Faulí 2018-09-20 10:03:28 UTC
*** Bug 119994 has been marked as a duplicate of this bug. ***
Comment 18 Commit Notification 2018-09-20 13:10:49 UTC
Armin Le Grand committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3c658d7fd77eb2e7b98e70c6b8fd5f80cb6414f7

tdf#119843 Use transformed polygon data when needed

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 19 Gavin Flower 2018-09-20 22:10:42 UTC
Can confirm fixed for me!

(Linux, Mate Desktop Environment)
Comment 20 Xavier Van Wijmeersch 2018-09-20 22:30:04 UTC
Also confirm for me fixed! Thanks for the good work to you all! cheers

Version: 6.2.0.0.alpha0+
Build ID: 11a229c0094979b4980d8e3be8a8a7db60d01be7
CPU threads: 8; OS: Linux 4.14; UI render: default; VCL: kde4; 
Locale: nl-BE (en_US.UTF-8); Calc: threaded
Comment 21 Jean-Baptiste Faure 2018-09-21 04:49:47 UTC
Fixed for me in Version: 6.2.0.0.alpha0+
Build ID: 66232248ff55639052ddb76918d555e21dc9c46b
Threads CPU : 4; OS : Linux 4.15; UI Render : par défaut; VCL: gtk3; 
Ubuntu_18.04_x86-64
Locale : fr-FR (fr_FR.UTF-8); Calc: threaded

Thank very much!

Best regards. JBF
Comment 22 BogdanB 2018-09-21 04:56:41 UTC
Fixed on windows also.

Version: 6.2.0.0.alpha0+ (x64)
Build ID: 3208fcb3a36d75d6290d9c548430682f153b09db
CPU threads: 4; OS: Windows 10.0; UI render: default; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-09-20_22:43:20
Locale: ro-RO (ro_RO); Calc: threaded
Comment 23 Armin Le Grand (collabora) 2018-09-21 09:47:02 UTC
allright, setting to fixed.