tdf#119843 Use transformed polygon data when needed

Change-Id: I33cd8da925b9bf3d5b50a1c6ac43babedbe31d0a
Reviewed-on: https://gerrit.libreoffice.org/60769
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>